argocd-manifests/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: ingress
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:xxxxxxxxxxxx:certificate/eb93366d-2d7b-499c-b6f2-9b06243cad5d
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: |
      [{"HTTP": 80}, {"HTTPS": 443}]
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
  name: argocd
  namespace: argocd
spec:
  ingressClassName: alb
  rules:
  - host: "argocd.dev.devopslite.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
